--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.4",
+    "axios": "^1.13.2",
+    "cloudinary": "^2.9.0",
     "inngest": "^3.49.1",
     "mongoose": "^8.21.0",
     "mongose": "^0.0.2-security",
